# axion

./: .gitignore  CMakeLists.txt  README.md  config-example.json
i18n/: en_US.json  pt_BR.json
include/client/: client.hpp
include/commands/: command.hpp  commandsList.hpp  fight.hpp  help.hpp  inventory.hpp  skills.hpp  stats.hpp
include/configManager/: configManager.hpp
include/databaseManager/: databaseManager.hpp
include/i18nManager/: i18nManager.hpp
include/randoms/: randoms.hpp
include/rooster/: rooster.hpp  utils.hpp
include/skills/: skills.hpp
include/utils/: utils.hpp
src/: main.cpp
src/client/: client.cpp
src/commands/: commandsList.cpp  fight.cpp  help.cpp  inventory.cpp  skills.cpp  stats.cpp
src/commands/client/: ping.cpp
src/commands/guild/: clear.cpp  servericon.cpp  serverinfo.cpp
src/commands/moderation/: ban.cpp
src/commands/rinha/: galoinfo.cpp  rank.cpp  rinha.cpp  shop.cpp
src/commands/rinha/headers/: rewards.hpp  rinha.hpp  rooster.hpp  skills.hpp
src/commands/user/: avatar.cpp  profile.cpp  purge.cpp  userinfo.cpp
src/configManager/: configManager.cpp
src/database/: db.hpp
src/databaseManager/: databaseManager.cpp
src/events/: interactionCreate.hpp  messageCreate.hpp  ready.hpp
src/handlers/: commands.hpp  events.hpp
src/i18nManager/: i18nManager.cpp
src/randoms/: randoms.cpp
src/rooster/: utils.cpp
src/utils/: randoms.hpp  utils.cpp
